# Data_Wrangler

./: Data_Wrangler.bat  README.md  create_icon.py  desktop_app.py  pyproject.toml  requirements.txt
assets/: sample_customers.csv  sample_datetime_data.csv  sample_dirty_data.csv  sample_orders.csv  sample_products.csv
tests/: __init__.py  test_cleaning.py  test_merge.py
wrangle/: __init__.py  cleaning.py  io.py  merge.py  report.py
